erDiagram

    CATEGORIES {
        text id
        varchar name
        varchar type
    }

    PGMIGRATIONS {
        int id
        varchar name
        timestamp run_on
    }

    SESSIONS {
        text token
    }

    SETTINGS {
        text id
        text user_id
        numeric monthly_income
        numeric weekly_budget
        double segment
        text segment_label
        timestamp created_at
        timestamp updated_at
    }

    TRANSACTIONS {
        text id
        text user_id
        text category_id
        varchar title
        varchar type
        numeric amount
        bool is_impulsive
        timestamp transaction_date
        timestamp created_at
        timestamp updated_at
    }

    USERS {
        text id
        text username
        text avatar
        text email
        text password
        text role
        double impulsive_ratio
        timestamp created_at
        timestamp updated_at
    }

    USERS ||--o{ SETTINGS : has

    USERS ||--o{ TRANSACTIONS : has

    CATEGORIES ||--o{ TRANSACTIONS : has
